--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ google_scholar_stats_use_cdn : true
 google_analytics_id      : Dd4_VW8AAAAJ
 
 # SEO Related
-google_site_verification :  jcQ9fBvjcOiwB7y1xzoMlXuvjRZ-ktiIlvEfkoqzbAY
-bing_site_verification   :  D31463E96A8E54674C9CED1F6A5CB000
+google_site_verification :  # jcQ9fBvjcOiwB7y1xzoMlXuvjRZ-ktiIlvEfkoqzbAY
+bing_site_verification   :  # D31463E96A8E54674C9CED1F6A5CB000
 baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
