--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Chuang Yu (余创)"
-description              : "Focusing on MCoT, Image/Video Understanding and Reasoning, SIRST detection"
+description              : "Focusing on Image/Video Understanding and Reasoning, MCoT, SIRST detection"
 repository               : "yuchuang1205/yuchuang1205.github.io"
 google_scholar_stats_use_cdn : true
 
