--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,6 @@ main:
   - title: "Academic Service"
     url: "/#-academic-service"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Hobbies"
+    url: "/#-hobbies"
 
-  - title: "Internships"
-    url: "/#-internships"
