--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: "/#-news-"
 
   - title: "Publications"
-    url: "/#-publications (Some representative papers)"
+    url: "/#-publications-(Some-representative-papers)"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
